# docs/swagger.json
@@ -394,10 +394,10 @@
                     }
                 ],
                 "responses": {
-                    "301": {
-                        "description": "Redirect — ссылка на YooKassa",
+                    "204": {
+                        "description": "ссылка на платеж YooKassa",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.PaymentURL"
                         }
                     },
                     "400": {
@@ -973,6 +973,14 @@
                     "items": {
                         "$ref": "#/definitions/dto.SampleDTO"
                     }
+                }
+            }
+        },
+        "dto.PaymentURL": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
                 }
             }
         },
